--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Hosting an Hosting Category Flat Bootstarp Resposive Website Template | Contact :: w3layouts</title>
+<title>Hosting an Hosting Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Hosting Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
@@ -16,48 +16,75 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery-1.11.1.min.js"></script>
+
 <!-- Custom Theme files -->
 <link href="css/font-awesome.css" rel='stylesheet' type='text/css' />
 <link href="css/style.css" rel='stylesheet' type='text/css' />
+<link href="css/ctm_style.css" rel='stylesheet' type='text/css' />
+
 <!-- Custom Theme files -->
 <!-- webfonts -->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
 <!-- webfonts -->
+
+<!-- Add fancyBox main JS and CSS files -->
+<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
+<link href="css/popup.css" rel="stylesheet" type="text/css">
+<script>
+    $(document).ready(function() {
+        $('.popup-with-zoom-anim').magnificPopup({
+            type: 'inline',
+            fixedContentPos: false,
+            fixedBgPos: true,
+            overflowY: 'auto',
+            closeBtnInside: true,
+            preloader: false,
+            midClick: true,
+            removalDelay: 300,
+            mainClass: 'my-mfp-zoom-in'
+    });
+});
+</script>
 </head>
 <body>
-<div class="header">
-	<div class="container">
-		<div class="header_top">
-			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" alt=""/></a>
-			</div> 
-			<div class="cssmenu">
-					<ul>
-						<li><a href="mailto:info@mycompany.com">info(at)webhosting.com</a></li> 
-						<li class="active"><a href="login.html">Log In</a></li> 
-						<li><a href="register.html">Register</a></li>
-					</ul>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-		<div class="h_menu4"><!-- start h_menu4 -->
-	        <a class="toggleMenu" href="#">Menu</a>
-				<ul class="nav">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li><a href="service.html">Service</a></li>
-					<li><a href="plans.html">Hosting Plans</a></li>
-					<li><a href="domain.html">Domain</a></li>
-					<li><a href="faq.html">FAQ</a></li>
-					<li><a href="testimonials.html">Testimonials</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="support.html">Support</a></li>
-					<li class="active"><a href="contact.html">Contact Us</a></li>
-				 </ul>
-				 <script type="text/javascript" src="js/nav.js"></script>
-	      </div><!-- end h_menu4 -->
-     </div>
-</div>
+    <div class="header">
+        <div class="">
+            <div class="header_top">
+                <div class="container">
+                    <div class="logo">
+                        <a href="index.html"><img src="images/logo.png" alt=""/></a>
+                    </div> 
+                    <div class="cssmenu">
+                            <ul>
+                                <li><a href="mailto:info@mycompany.com">info(at)webhosting.com</a></li> 
+                                <li class="active"><a href="login.html">Log In</a></li> 
+                                <li><a href="register.html">Register</a></li>
+                            </ul>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+            </div>
+            <div class="h_menu4"><!-- start h_menu4 -->
+            <div class="container">
+                <a class="toggleMenu" href="#">Menu</a>
+                <ul class="nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="service.html">Service</a></li>
+                    <li><a href="plans.html">Hosting Plans</a></li>
+                    <li><a href="domain.html">Domain</a></li>
+                    <li><a href="webmail.html">WebMail</a></li>
+                    <li><a href="store.html">Store</a></li>
+                    <li><a href="promo.html">Promo</a></li>
+                    <li><a href="reseller.html">Reseller</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                 </ul>
+                 <script type="text/javascript" src="js/nav.js"></script>
+            </div>
+
+            </div><!-- end h_menu4 -->
+         </div>
+    </div>
 <div class="about">
 	 <div class="container">
 		<h1>Support<span class="m_1"><br>Center</span></h1>
@@ -127,7 +154,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </div>
 <div class="map">
-	     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3150859.767904157!2d-96.62081048651531!3d39.536794757966845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1408111832978"> </iframe>
+	     <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:400px;width:1519.2px;'><div id='gmap_canvas' style='height:400px;width:1519.2px;'></div><div><small><a href="http://embedgooglemaps.com">embed google maps</a></small></div><div><small><a href="https://ultimatewebtraffic.com/">buy targeted traffic</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(-8.007966924706475,112.62449056925311),mapTypeId: google.maps.MapTypeId.TERRAIN};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(-8.007966924706475,112.62449056925311)});infowindow = new google.maps.InfoWindow({content:'<strong>Illiyin.co</strong><br>Perum Puri Nirwana Keben Kav. 7<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
 	    </div>
 
 <div class="footer">
