--- a/index.html
+++ b/index.html
@@ -48,21 +48,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 <body>
     <div class="header">
-        <div class="container">
+        <div class="">
             <div class="header_top">
-                <div class="logo">
-                    <a href="index.html"><img src="images/logo.png" alt=""/></a>
-                </div> 
-                <div class="cssmenu">
-                        <ul>
-                            <li><a href="mailto:info@mycompany.com">info(at)webhosting.com</a></li> 
-                            <li class="active"><a href="login.html">Log In</a></li> 
-                            <li><a href="register.html">Register</a></li>
-                        </ul>
+                <div class="container">
+                    <div class="logo">
+                        <a href="index.html"><img src="images/logo.png" alt=""/></a>
+                    </div> 
+                    <div class="cssmenu">
+                            <ul>
+                                <li><a href="mailto:info@mycompany.com">info(at)webhosting.com</a></li> 
+                                <li class="active"><a href="login.html">Log In</a></li> 
+                                <li><a href="register.html">Register</a></li>
+                            </ul>
+                    </div>
+                    <div class="clearfix"> </div>
                 </div>
-                <div class="clearfix"> </div>
             </div>
             <div class="h_menu4"><!-- start h_menu4 -->
+            <div class="container">
                 <a class="toggleMenu" href="#">Menu</a>
                 <ul class="nav">
                     <li class="active"><a href="index.html">Home</a></li>
@@ -70,13 +73,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <li><a href="service.html">Service</a></li>
                     <li><a href="plans.html">Hosting Plans</a></li>
                     <li><a href="domain.html">Domain</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="support.html">Support</a></li>
+                    <li><a href="webmail.html">WebMail</a></li>
+                    <li><a href="store.html">Store</a></li>
+                    <li><a href="promo.html">Promo</a></li>
+                    <li><a href="reseller.html">Reseller</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                  </ul>
                  <script type="text/javascript" src="js/nav.js"></script>
+            </div>
+
             </div><!-- end h_menu4 -->
          </div>
     </div>
@@ -233,26 +238,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="col-md-8 row_1">
                 <h4 class="tz-title-4 tzcolor-blue">
-                 <p class="tzweight_Bold m_2"><span class="m_1">Why<br></span>Smartmedia</p>
+                 <p class="tzweight_Bold m_2"><span class="m_1">our<br></span>Feature</p>
                </h4>
                <div class="section_1">
                 <div class="col_1_of_3 span_1_of_3">
                     <div class="list_1">
                         <ul>
-                          <li><a href="">lorem.</a></li>
-                          <li><a href="">It is a long established.</a></li>
-                          <li><a href="">The standard chunk.</a></li>
-                          <li><a href="">Therefore always free</a></li>     
+                          <li><a href="">Unlimited Email.</a></li>
+                          <li><a href="">cPanel Control Panel.</a></li>
+                           
+                          <li><a href="">LiteSpeed Enterprise dan Load Balancer.</a></li>      
+                          <li><a href="">SSH, GIT, Composser, Addon Domain.</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col_1_of_3 span_1_of_3">
                     <div class="list_1">
                         <ul>
-                          <li><a href="">Voluptatem accusan.</a></li>
-                          <li><a href="">Ipsum generatortss.</a></li>
-                          <li><a href="">Lorem ipsum is simply.</a></li>
-                          <li><a href="">It is a long established.</a></li>     
+                        <li><a href="">Free Backup Daily.</a></li>  
+                          <li><a href="">Website Builder.</a></li>
+                          <li><a href="">File Manager, FTP, Instant Backup, dll.</a></li>
+                          <li><a href="">MySQL, MariaDB, PHPMyAdmin, dll.</a></li>
+                           
                         </ul>
                     </div>
                 </div>
