--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Hosting an Hosting Category Flat Bootstarp Resposive Website Template | About :: w3layouts</title>
+<title>Hosting an Hosting Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Hosting Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
@@ -16,49 +16,75 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery-1.11.1.min.js"></script>
+
 <!-- Custom Theme files -->
 <link href="css/font-awesome.css" rel='stylesheet' type='text/css' />
 <link href="css/style.css" rel='stylesheet' type='text/css' />
 <link href="css/ctm_style.css" rel='stylesheet' type='text/css' />
+
 <!-- Custom Theme files -->
 <!-- webfonts -->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
 <!-- webfonts -->
+
+<!-- Add fancyBox main JS and CSS files -->
+<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
+<link href="css/popup.css" rel="stylesheet" type="text/css">
+<script>
+    $(document).ready(function() {
+        $('.popup-with-zoom-anim').magnificPopup({
+            type: 'inline',
+            fixedContentPos: false,
+            fixedBgPos: true,
+            overflowY: 'auto',
+            closeBtnInside: true,
+            preloader: false,
+            midClick: true,
+            removalDelay: 300,
+            mainClass: 'my-mfp-zoom-in'
+    });
+});
+</script>
 </head>
 <body>
-<div class="header">
-	<div class="container">
-		<div class="header_top">
-			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" alt=""/></a>
-			</div> 
-			<div class="cssmenu">
-					<ul>
-						<li><a href="mailto:info@mycompany.com">info(at)webhosting.com</a></li> 
-						<li class="active"><a href="login.html">Log In</a></li> 
-						<li><a href="register.html">Register</a></li>
-					</ul>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-		<div class="h_menu4"><!-- start h_menu4 -->
-	        <a class="toggleMenu" href="#">Menu</a>
-				<ul class="nav">
-					<li><a href="index.html">Home</a></li>
-					<li class="active"><a href="about.html">About Us</a></li>
-					<li><a href="service.html">Service</a></li>
-					<li><a href="plans.html">Hosting Plans</a></li>
-					<li><a href="domain.html">Domain</a></li>
-					<li><a href="faq.html">FAQ</a></li>
-					<li><a href="testimonials.html">Testimonials</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="support.html">Support</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
-				 </ul>
-				 <script type="text/javascript" src="js/nav.js"></script>
-	      </div><!-- end h_menu4 -->
-     </div>
-</div>
+    <div class="header">
+        <div class="">
+            <div class="header_top">
+                <div class="container">
+                    <div class="logo">
+                        <a href="index.html"><img src="images/logo.png" alt=""/></a>
+                    </div> 
+                    <div class="cssmenu">
+                            <ul>
+                                <li><a href="mailto:info@mycompany.com">info(at)webhosting.com</a></li> 
+                                <li class="active"><a href="login.html">Log In</a></li> 
+                                <li><a href="register.html">Register</a></li>
+                            </ul>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+            </div>
+            <div class="h_menu4"><!-- start h_menu4 -->
+            <div class="container">
+                <a class="toggleMenu" href="#">Menu</a>
+                <ul class="nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="service.html">Service</a></li>
+                    <li><a href="plans.html">Hosting Plans</a></li>
+                    <li><a href="domain.html">Domain</a></li>
+                    <li><a href="webmail.html">WebMail</a></li>
+                    <li><a href="store.html">Store</a></li>
+                    <li><a href="promo.html">Promo</a></li>
+                    <li><a href="reseller.html">Reseller</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                 </ul>
+                 <script type="text/javascript" src="js/nav.js"></script>
+            </div>
+
+            </div><!-- end h_menu4 -->
+         </div>
+    </div>
 <div class="about">
 	 <div class="container">
 		<h1>About Us<span class="m_1"><br>What we are</span></h1>
@@ -102,7 +128,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			              <li><a href="">Therefore always free</a></li>     
 			            </ul>
 		           </div>
-		           <a class="but2" href="#">Host Today</a>
+		           <a class="but2" href="register.html">Host Today</a>
         		</div>
         		<div class="clearfix"> </div>
         	</div>
@@ -121,7 +147,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			              <li><a href="">Therefore always free</a></li>     
 			            </ul>
 		           </div>
-		           <a class="but2" href="#">Host Today</a>
+		           <a class="but2" href="register.html">Host Today</a>
         		</div>
         		<div class="clearfix"> </div>
         	</div>
@@ -136,7 +162,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="box5">
 		  <div class="team_box1">
 			<div class="col-md-3 thumb_1">
-				<img src="images/pic4.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/people5.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -153,7 +179,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 thumb_1">
-				<img src="images/pic5.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/people6.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -187,7 +213,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 thumb_1">
-				<img src="images/pic7.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/people1.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -207,7 +233,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		   </div>
 		   <div class="team_box2">
 			<div class="col-md-3 thumb_1">
-				<img src="images/pic8.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/people2.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -224,7 +250,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 thumb_1">
-				<img src="images/pic9.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/people4.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -258,7 +284,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 thumb_1">
-				<img src="images/pic11.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/people3.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
