--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Hosting an Hosting Category Flat Bootstarp Resposive Website Template | Service :: w3layouts</title>
+<title>Hosting an Hosting Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Hosting Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
@@ -16,49 +16,75 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery-1.11.1.min.js"></script>
+
 <!-- Custom Theme files -->
 <link href="css/font-awesome.css" rel='stylesheet' type='text/css' />
 <link href="css/style.css" rel='stylesheet' type='text/css' />
 <link href="css/ctm_style.css" rel='stylesheet' type='text/css' />
+
 <!-- Custom Theme files -->
 <!-- webfonts -->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
 <!-- webfonts -->
+
+<!-- Add fancyBox main JS and CSS files -->
+<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
+<link href="css/popup.css" rel="stylesheet" type="text/css">
+<script>
+    $(document).ready(function() {
+        $('.popup-with-zoom-anim').magnificPopup({
+            type: 'inline',
+            fixedContentPos: false,
+            fixedBgPos: true,
+            overflowY: 'auto',
+            closeBtnInside: true,
+            preloader: false,
+            midClick: true,
+            removalDelay: 300,
+            mainClass: 'my-mfp-zoom-in'
+    });
+});
+</script>
 </head>
 <body>
-<div class="header">
-	<div class="container">
-		<div class="header_top">
-			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" alt=""/></a>
-			</div> 
-			<div class="cssmenu">
-					<ul>
-						<li><a href="mailto:info@mycompany.com">info(at)webhosting.com</a></li> 
-						<li class="active"><a href="login.html">Log In</a></li> 
-						<li><a href="register.html">Register</a></li>
-					</ul>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-		<div class="h_menu4"><!-- start h_menu4 -->
-	        <a class="toggleMenu" href="#">Menu</a>
-				<ul class="nav">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li class="active"><a href="service.html">Service</a></li>
-					<li><a href="plans.html">Hosting Plans</a></li>
-					<li><a href="domain.html">Domain</a></li>
-					<li><a href="faq.html">FAQ</a></li>
-					<li><a href="testimonials.html">Testimonials</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="support.html">Support</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
-				 </ul>
-				 <script type="text/javascript" src="js/nav.js"></script>
-	      </div><!-- end h_menu4 -->
-     </div>
-</div>
+    <div class="header">
+        <div class="">
+            <div class="header_top">
+                <div class="container">
+                    <div class="logo">
+                        <a href="index.html"><img src="images/logo.png" alt=""/></a>
+                    </div> 
+                    <div class="cssmenu">
+                            <ul>
+                                <li><a href="mailto:info@mycompany.com">info(at)webhosting.com</a></li> 
+                                <li class="active"><a href="login.html">Log In</a></li> 
+                                <li><a href="register.html">Register</a></li>
+                            </ul>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+            </div>
+            <div class="h_menu4"><!-- start h_menu4 -->
+            <div class="container">
+                <a class="toggleMenu" href="#">Menu</a>
+                <ul class="nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="service.html">Service</a></li>
+                    <li><a href="plans.html">Hosting Plans</a></li>
+                    <li><a href="domain.html">Domain</a></li>
+                    <li><a href="webmail.html">WebMail</a></li>
+                    <li><a href="store.html">Store</a></li>
+                    <li><a href="promo.html">Promo</a></li>
+                    <li><a href="reseller.html">Reseller</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                 </ul>
+                 <script type="text/javascript" src="js/nav.js"></script>
+            </div>
+
+            </div><!-- end h_menu4 -->
+         </div>
+    </div>
 <div class="about">
 	 <div class="container">
 		<h1>Our Service<span class="m_1"><br>What we Doing</span></h1>
@@ -118,8 +144,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/s1.jpg" class="img-responsive" alt=""/>
 				</div>
 				<div class="cont span_2_of_about">
-					<h3><a href="#">Service Name One</a></h3>
-				    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make.</p>
+					<h3><a href="#">Domain</a></h3>
+				    <p>Kami memberikan Full control untuk domain Anda. Tidak ada syarat tersembunyi, tidak ada peraturan lock domain, atau semua keruwetan seperti provider hosting murah sebelah. So, kenapa harus beli di tempat lain, jika di SmartMedia lebih baik? </p>
 				</div>
 				<div class="clearfix"></div>	
 			</div>
@@ -128,8 +154,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/s1.jpg" class="img-responsive" alt=""/>
 				</div>
 				<div class="cont span_2_of_about">
-					<h3><a href="#">Service Name Two</a></h3>
-				    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make.</p>
+					<h3><a href="#">Hosting</a></h3>
+				    <p>Setiap website pasti membutuhkan server hosting online agar bisa diakses melalui internet. Untuk itu kami memberikan solusi untuk Anda yang ingin website Anda bisa diakses melalui internet (online) dengan menyewakan space hosting murah. </p>
 				</div>
 				<div class="clearfix"></div>	
 			</div>
@@ -138,8 +164,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/s1.jpg" class="img-responsive" alt=""/>
 				</div>
 				<div class="cont span_2_of_about">
-					<h3><a href="#">Service Name Three</a></h3>
-				    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make.</p>
+					<h3><a href="#">Web Mail</a></h3>
+				    <p>Email hosting memungkinkan Anda untuk memiliki email dengan alamat nama perusahaan Anda (nama_anda@namaperusahaan). Dengan layanan Email hosting, Anda bisa mempromosikan perusahaan Anda dengan mudah kepada rekan bisnis dan calon pelanggan Anda.</p>
 				</div>
 				<div class="clearfix"></div>	
 			</div>
