--- a/reseller.html
+++ b/reseller.html
@@ -87,7 +87,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 <div class="about">
 	 <div class="container">
-		<h1>Hosting<span class="m_1"><br>Plans</span></h1>
+		<h1>Reseller<span class="m_1"><br>Plans</span></h1>
 	</div>
 </div>
 <div class="about_grid">
@@ -99,7 +99,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		    <div class="col-md-4">
 				<ul class="project_box">
 				  <li class="mini-post-meta1">1</li>
-				  <li class="desc"><h5><a href="#">Choose Your Plan</a></h5>
+				  <li class="desc"><h5><a href="#">Order Hosting</a></h5>
 				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
 				  </li>	
 				  <div class="clearfix"> </div>
@@ -108,7 +108,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4">
 				<ul class="project_box">
 				  <li class="mini-post-meta1">2</li>
-				  <li class="desc"><h5><a href="#">Creative Your Account</a></h5>
+				  <li class="desc"><h5><a href="#">Konfirmasi Pembayaran</a></h5>
 				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
 				  </li>	
 				  <div class="clearfix"> </div>
@@ -117,7 +117,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4">
 				<ul class="project_box">
 				  <li class="mini-post-meta1">3</li>
-				  <li class="desc"><h5><a href="#">Launch Your Hosting</a></h5>
+				  <li class="desc"><h5><a href="#">Silahkan Cek Hosting</a></h5>
 				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
 				  </li>	
 				  <div class="clearfix"> </div>
@@ -130,15 +130,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="about_grid1">
 	<div class="container">
 	        <h4 class="tz-title-4 tzcolor-blue">
-               <p class="tzweight_Bold"><span class="m_1">Our<br></span>Hosting</p>
+               <p class="tzweight_Bold"><span class="m_1">Our<br></span>Reseller Plan</p>
             </h4>
         	 <div class="col-md-3 thumb_2">
 							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>5<br><span class="month">Per Month</span></h3>
+								<h3>Rp.100rb<br><span class="month">Per Bulan</span></h3>
 								<ul>
 									<li><span>Standard Plan</span></li>
-									<li><a href="#">10GB Disk Space</a></li>
-									<li><a href="#">1TB Bandwidth</a></li>
+									<li><a href="#">100 MB Disk Space</a></li>
+									<li><a href="#">8GB Bandwidth</a></li>
 									<li><a href="#">Free DDoS Protection</a></li>
 									<li><a href="#">Free Daily Backups</a></li>
 									<li><a href="#">Managed Hosting</a></li>
