--- a/webmail.html
+++ b/webmail.html
@@ -68,12 +68,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <a class="toggleMenu" href="#">Menu</a>
                 <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">Service</a></li>
                     <li><a href="plans.html">Hosting Plans</a></li>
                     <li><a href="domain.html">Domain</a></li>
-                    <li><a href="webmail.html">WebMail</a></li>
+                    <li class="active"><a href="webmail.html">WebMail</a></li>
                     <li><a href="store.html">Store</a></li>
                     <li><a href="promo.html">Promo</a></li>
                     <li><a href="reseller.html">Reseller</a></li>
